complete markdown for generator model

--- a/GANs.ipynb
+++ b/GANs.ipynb
@@ -6,7 +6,7 @@
       "name": "GANs.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNGvjHfU8htyZAeCHVKqIOh",
+      "authorship_tag": "ABX9TyONgxL2uYmZG6D6PP9Qj4lY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,10 +74,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "KEOJcwQpGaYj",
-        "outputId": "f9b098c8-b44c-41bf-aff0-7eea335efbc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "38113a6d-cbba-44c9-d253-8dcfb4589aa5"
       },
       "source": [
         "(train_images, train_labels), (test_images, test_labels) = tf.keras.datasets.mnist.load_data()"
@@ -103,7 +103,7 @@
           "height": 282
         },
         "id": "1Qxc4XyCGmlT",
-        "outputId": "12a5db96-e7a6-4e0c-8b9d-cd3d2eb36130"
+        "outputId": "78cfcfbb-b57a-47ca-b914-af8e0356c395"
       },
       "source": [
         "plt.imshow(train_images[1], cmap='gray')"
@@ -114,7 +114,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f7fc200dc90>"
+              "<matplotlib.image.AxesImage at 0x7f6c5db7d910>"
             ]
           },
           "metadata": {},
@@ -177,7 +177,7 @@
           "height": 282
         },
         "id": "XzO1Up1KPJ1h",
-        "outputId": "f3c5329c-a1c0-49e5-ff74-44e7a6ddeed7"
+        "outputId": "1c1ba79c-65f2-46d5-8bef-1a92f1e1487f"
       },
       "source": [
         "plt.imshow(train_images[0],cmap='gray')"
@@ -188,7 +188,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f7fba59ae90>"
+              "<matplotlib.image.AxesImage at 0x7f6c5d6e1e50>"
             ]
           },
           "metadata": {},
@@ -215,7 +215,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e1c8fa24-fb31-4fd7-d1f0-e9f9d80b9e5d"
+        "outputId": "c7858771-1437-4f42-f075-35755c9f8ccd"
       },
       "source": [
         "train_images.shape"
@@ -241,7 +241,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4aKfJS5zNS68",
-        "outputId": "2b2eeb2f-457e-4abf-b672-e45d4787456e"
+        "outputId": "74dfac93-361d-48f9-cd14-0bb81c8d0754"
       },
       "source": [
         "# Expanding dimensions\n",
@@ -372,6 +372,46 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wRv7SGHqRDX5",
+        "outputId": "b1fb3b7b-4020-42ca-e376-3fd396001077",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "discriminator().summary()"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_1\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv2d (Conv2D)              (None, 28, 28, 7)         70        \n",
+            "_________________________________________________________________\n",
+            "conv2d_1 (Conv2D)            (None, 28, 28, 7)         448       \n",
+            "_________________________________________________________________\n",
+            "flatten (Flatten)            (None, 5488)              0         \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 50)                274450    \n",
+            "_________________________________________________________________\n",
+            "dense_3 (Dense)              (None, 1)                 51        \n",
+            "=================================================================\n",
+            "Total params: 275,019\n",
+            "Trainable params: 275,019\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "FqNHc6mPQ20z"
@@ -379,7 +419,9 @@
       "source": [
         "## Building the Generator \n",
         "\n",
-        "The generator is a neural network "
+        "The generator is a neural network which takes in a random noise input and produces an output which is extremely similar to the real data. In this problem the output should be a `28x28` image. The input to the generator is a tensor of 100 random numbers.\n",
+        "\n",
+        "The generator follows a process of upsampling, i.e., generating `784 pixels` from 100 input values which are then rescaled to a `28x28` image. "
       ]
     },
     {
@@ -408,6 +450,56 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "z2XQ-Br1Q1ZF",
+        "outputId": "b216520f-584e-4337-85d0-4b05cf4a4eff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "generator().summary()"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "dense (Dense)                (None, 12544)             1266944   \n",
+            "_________________________________________________________________\n",
+            "batch_normalization (BatchNo (None, 12544)             50176     \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 12544)             157364480 \n",
+            "_________________________________________________________________\n",
+            "batch_normalization_1 (Batch (None, 12544)             50176     \n",
+            "_________________________________________________________________\n",
+            "reshape (Reshape)            (None, 7, 7, 256)         0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_transpose (Conv2DTran (None, 7, 7, 128)         819328    \n",
+            "_________________________________________________________________\n",
+            "batch_normalization_2 (Batch (None, 7, 7, 128)         512       \n",
+            "_________________________________________________________________\n",
+            "conv2d_transpose_1 (Conv2DTr (None, 14, 14, 64)        204864    \n",
+            "_________________________________________________________________\n",
+            "batch_normalization_3 (Batch (None, 14, 14, 64)        256       \n",
+            "_________________________________________________________________\n",
+            "conv2d_transpose_2 (Conv2DTr (None, 28, 28, 1)         1601      \n",
+            "=================================================================\n",
+            "Total params: 159,758,337\n",
+            "Trainable params: 159,707,777\n",
+            "Non-trainable params: 50,560\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "GrtQfiFsU9MB"
       },
       "source": [
@@ -416,7 +508,7 @@
         "  fake_loss = tf.keras.losses.binary_crossentropy(tf.ones_like(fake_predictions),fake_predictions)\n",
         "  return fake_loss"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +519,7 @@
       "source": [
         "generator_optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +531,7 @@
         "generator_model= generator()\n",
         "discriminator_model = discriminator()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -448,7 +540,23 @@
         "id": "b2h3XQDzVT_q"
       },
       "source": [
-        "## Training "
+        "## Training the GAN\n",
+        "Training the GAN involves the following steps \n",
+        "  1. Training the Discriminator\n",
+        "    \n",
+        "    a. Passing real and fake data through the discriminator.\n",
+        "\n",
+        "    b. Calculating the discriminator loss\n",
+        "\n",
+        "    c. Passing this loss through the optimiser.\n",
+        "\n",
+        "  2. Training the Generator\n",
+        "\n",
+        "    a. Passing fake data through the generator.\n",
+        "\n",
+        "    b. Calculating generator loss\n",
+        "\n",
+        "    c. Passing this loss through the optimiser"
       ]
     },
     {
@@ -463,7 +571,7 @@
         "      images = tf.cast(images,tf.dtypes.float32)\n",
         "      train_step(images)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -499,7 +607,7 @@
         "        print(\"Discriminator Loss: \",np.mean(disc_loss))\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -515,7 +623,7 @@
       "source": [
         "train(train_dataset,100)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5553,7 +5661,7 @@
         "generated_test_image = generator_model(test_image_noise)\n",
         "plt.imshow(tf.reshape(generated_test_image,(28,28)),cmap='gray')"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5594,7 +5702,7 @@
         "random_image = tf.reshape(random_image,(28,28))\n",
         "plt.imshow(random_image,cmap='gray')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
